Juiste OSC addresses voor gain

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -15,14 +15,14 @@
                      class="flex flex-col items-center gap-1 px-4 py-2"
                      ActiveClass="text-primary"
                      Match="NavLinkMatch.All">
-                <i class="fas fa-sliders-h text-xl"></i>
+                <i class="fas fa-plug text-xl"></i>
                 <span class="text-xs">Layout</span>
             </NavLink>
 
             <NavLink href="@Routes.Dashboard" 
                       ActiveClass="text-primary"
                      class="flex flex-col items-center gap-1 px-4 py-2">
-                <i class="fas fa-chart-bar text-xl"></i>
+                <i class="fas fa-square-sliders-vertical text-xl"></i>
                 <span class="text-xs">Dashboard</span>
             </NavLink>
 
