--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -3,8 +3,8 @@
 @using Eggbox.Models
 @using Microsoft.Extensions.Logging
 @inject Mixer Mixer
-@inject MixerIO IO
-@inject MixerBroadcastScanner Scanner
+@inject UDPService IO
+@inject BroadcastScanner Scanner
 @inject ILogger<Home> Logger
 @inject NavigationManager NavManager
 
